Pulse 2 3.4.0
=============
 * [FEATURE] Replacement of historic Pulse PXE by PXELINUX